feat(chat): expand backend filters and metadata

--- a/src/malla/templates/base.html
+++ b/src/malla/templates/base.html
@@ -219,7 +219,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <small>Powered by <a href="https://github.com/zenitraM/malla">Malla</a></small>
+                    <small>Powered by <a href="https://github.com/aminovpavel/meshworks-malla" target="_blank" rel="noopener">meshworks-malla</a></small>
                 </div>
             </div>
         </div>
