--- a/src/malla/templates/base.html
+++ b/src/malla/templates/base.html
@@ -58,12 +58,13 @@
         /* Node tooltip styles */
         .node-link {
             position: relative;
-            color: #0d6efd;
+            color: var(--bs-primary);
             font-weight: 500;
         }
 
         .node-link:hover {
-            color: #0a58ca;
+            color: var(--bs-primary);
+            filter: brightness(0.85);
         }
 
         .tooltip.bs-tooltip-top .tooltip-inner,
