Set default map max age to 24 hours

--- a/src/malla/templates/map.html
+++ b/src/malla/templates/map.html
@@ -80,7 +80,7 @@
                         <option value="">No Limit</option>
                         <option value="1">1 Hour</option>
                         <option value="6">6 Hours</option>
-                        <option value="24">24 Hours</option>
+                        <option value="24" selected>24 Hours</option>
                         <option value="72">3 Days</option>
                         <option value="168">1 Week</option>
                     </select>
